# pysteg

./: .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  justfile  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  main.yml  release.yml
app/: __main__.py  aes256.py  constants.py  payload.py
app/gui/: app_icon.py  file_selector.py  main_window.py  push_button.py  text_input.py  text_label.py  text_line.py
app/gui/controllers/: actions.py
app/gui/models/: mode.py
app/gui/ui/: main_window_ui.py  styles.py
app/gui/ui/components/: file_selector.py  text_label.py
app/gui/validators/: input.py
scripts/: build.py  bump_version.py  release.py
tests/: test_actions.py  test_aes256.py  test_plain_text.py  test_validators.py
