[project]
name = "pysteg"
version = "0.1.0"
description = "A basic GUI for steganography"
authors = [
    { name = "KisSCoOl", email = "kisscool@kisscool.net" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stegano>=2.4.1",
    "pyqt6>=6.11.0",
    "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pyright]
include = ["app"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
