[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysteg"
version = "0.4.0"
description = "A basic GUI for steganography"
authors = [
    { name = "KisSCoOl", email = "kisscool@kisscool.net" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stegano>=2.4.1",
    "pyqt6>=6.11.0",
    "cryptography>=49.0.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
